# toolbox

./: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  publish.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: icon.tsx
src/components/layout/: main.tsx
src/components/tools/: Base64.tsx  Base64Tool.tsx  DiffViewer.tsx  Hash.tsx  UUID.tsx  UrlEncode.tsx
src/lib/: utils.ts
src/pages/: Home.tsx  Settings.tsx  Tool.tsx
src/stores/: settings.tsx
